feat(EUDPA-287): m0-02 Flip Jackson naming strategy snake_case -> camelCase
